--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
   "name": "mirushaki/flowplayer",
   "description": "flowplayer widget for yii2 framework",
+  "license": "GPL-v3.0"
   "require": {
     "php": "^5.4.0",
     "yiisoft/yii2": "2.*"
   }
+  "authors": [
+        {
+            "name": "Mirian Jintchvelashvili",
+            "email": "mirian.jintchvelashvili@gmail.com",
+        }
 }
