--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
   "require": {
-    "php": "^5.4.0",
+    "php": "^7.*.*",
     "yiisoft/yii2": "2.*"
   },
   "minimum-stability" : "stable",
